--- a/app/index.html
+++ b/app/index.html
@@ -40,19 +40,19 @@
       <table class="table table-hover">
         <tr>
           <td>Ambient Temperature</td>
-          <td>{{ latestTemperature | number:1 }}&deg; F</td>
+          <td>{{ latestTemperature | number:1 }} &deg;C</td>
         </tr>
         <tr>
           <td>Ambient Humidity</td>
-          <td>{{ latestHumidity | number:0 }}</td>
+          <td>{{ latestHumidity | number:1 }} %</td>
         </tr>
         <tr>
           <td>Ambient Light</td>
-          <td>{{ latestLightLevel | number:1 }}%</td>
+          <td>{{ latestLightLevel | number:1 }} %</td>
         </tr>
         <tr>
           <td>Soil Moisture</td>
-          <td>{{ latestSoilMoisture | number:1 }}%</td>
+          <td>{{ latestSoilMoisture | number:1 }} %</td>
         </tr>
       </table>
       <div class="row cameraImage" id="camera">
