--- a/app/index.html
+++ b/app/index.html
@@ -54,6 +54,10 @@
           <td>Soil Moisture</td>
           <td>{{ latestSoilMoisture | number:1 }} %</td>
         </tr>
+        <tr>
+          <td>Water PumpEvents</td>
+          <td>{{ latestPumpEvent | number:1 }} %</td>
+        </tr>        
       </table>
       <div class="row cameraImage" id="camera">
         <a ng-href="{{ images[currentImage].filename }}" target="_blank">
@@ -90,6 +94,8 @@
       <line-graph chart-data="lightLevel" value-property="light"></line-graph>
       <h3>Soil Moisture</h3>
       <line-graph chart-data="soilMoisture" value-property="moisture"></line-graph>
+      <h3>Watering Events</h3>
+      <line-graph chart-data="waterPumped" value-property="water_pumped"></line-graph>      
     </div>
     <div class="row" id="about">
       <h1>About</h1>
