--- a/app/index.html
+++ b/app/index.html
@@ -59,10 +59,20 @@
           <td>{{ latestSoilMoisture | number:1 }} %</td>
         </tr>
         <tr>
-          <td>Water PumpEvents</td>
-          <td>{{ pumpEventTimestamp }}</td>
+          <td>Water Pump Event -1</td>
+          <td>{{ pumpEventTimestamp1 }}</td>
           <td>{{ latestPumpEvent | number:1 }} %</td>
-        </tr>        
+        </tr>
+        <tr>
+          <td>Water Pump Event -2</td>
+          <td>{{ pumpEventTimestamp2 }}</td>
+          <td>{{ latestPumpEvent | number:1 }} %</td>
+        </tr>
+        <tr>
+          <td>Water Pump Event -3</td>
+          <td>{{ pumpEventTimestamp3 }}</td>
+          <td>{{ latestPumpEvent | number:1 }} %</td>
+        </tr>
       </table>
       <div class="row cameraImage" id="camera">
         <a ng-href="{{ images[currentImage].filename }}" target="_blank">
