--- a/app/index.html
+++ b/app/index.html
@@ -61,17 +61,17 @@
         <tr>
           <td>Water Pump Event -1</td>
           <td>{{ pumpEventTimestamp1 }}</td>
-          <td>{{ latestPumpEvent | number:1 }} %</td>
+          <td>{{ latestPumpEvent1 | number:1 }} %</td>
         </tr>
         <tr>
           <td>Water Pump Event -2</td>
           <td>{{ pumpEventTimestamp2 }}</td>
-          <td>{{ latestPumpEvent | number:1 }} %</td>
+          <td>{{ latestPumpEvent2 | number:1 }} %</td>
         </tr>
         <tr>
           <td>Water Pump Event -3</td>
           <td>{{ pumpEventTimestamp3 }}</td>
-          <td>{{ latestPumpEvent | number:1 }} %</td>
+          <td>{{ latestPumpEvent3 | number:1 }} %</td>
         </tr>
       </table>
       <div class="row cameraImage" id="camera">
