--- a/app/index.html
+++ b/app/index.html
@@ -41,7 +41,7 @@
         <tr>
           <td>Ambient Temperature</td>
           <td>{{ temperatureTimestamp }}</td>
-          <td>{{ latestTemperature | number:1 }}</td>
+          <td>{{ latestTemperature | number:1 }} °C</td>
         </tr>
         <tr>
           <td>Ambient Humidity</td>
@@ -61,17 +61,17 @@
         <tr>
           <td>Water Pump Event -1</td>
           <td>{{ pumpEventTimestamp1 }}</td>
-          <td>{{ latestPumpEvent1 | number:0 }} %</td>
+          <td>{{ latestPumpEvent1 | number:0 }} ml</td>
         </tr>
         <tr>
           <td>Water Pump Event -2</td>
           <td>{{ pumpEventTimestamp2 }}</td>
-          <td>{{ latestPumpEvent2 | number:0 }} %</td>
+          <td>{{ latestPumpEvent2 | number:0 }} ml</td>
         </tr>
         <tr>
           <td>Water Pump Event -3</td>
           <td>{{ pumpEventTimestamp3 }}</td>
-          <td>{{ latestPumpEvent3 | number:0 }} %</td>
+          <td>{{ latestPumpEvent3 | number:0 }} ml</td>
         </tr>
       </table>
       <div class="row cameraImage" id="camera">
