Fix sensor unit

--- a/app/index.html
+++ b/app/index.html
@@ -69,10 +69,10 @@
           <td>{{ latestSoilMoisture | number:1 }} %</td>
         </tr>
         <tr>
-          <td>Water Level</td>
+          <td>Water Fill Level</td>
           <td>{{ waterLevelTimestamp }}</td>
           <td>{{ waterLevelRecords }}</td>
-          <td>{{ latestWaterLevel | number:0 }} ml</td>
+          <td>{{ latestWaterLevel | number:1 }} %</td>
         </tr>
         <tr>
           <td>Water Pump Event -1</td>
