Add mobile website version; Add dual resolution image support

--- a/app/m.index.html
+++ b/app/m.index.html
@@ -140,7 +140,7 @@
     </div>
   </div> <!-- /container -->
   <script src="bower_components/angular/angular.js"></script>
-  <script src="app.js"></script>
+  <script src="appMobile.js"></script>
   <script src="services/d3.js"></script>
   <script src="directives/lineGraphMobile.js"></script>
   <script src="components/version/version.js"></script>
