Water level in liters

--- a/app/index.html
+++ b/app/index.html
@@ -72,7 +72,7 @@
           <td>Water Tank Level</td>
           <td>{{ waterLevelTimestamp }}</td>
           <td>{{ waterLevelRecords }}</td>
-          <td ng-style="customStyle.style">{{ latestWaterLevel | number:1 }} %</td>
+          <td ng-style="customStyle.style">{{ latestWaterLevel | number:1 }} l</td>
         </tr>
         <tr>
           <td>Water Pump Event -1</td>
