--- a/app/m.index.html
+++ b/app/m.index.html
@@ -37,7 +37,7 @@
   <div class="container">
     <div class="row">
       <h1>Current Readings</h1>
-      <table class="table table-hover">
+      <table class="table table-hover" style="font-size: 18px">
         <tr>
           <td><b>Sensor</b></td>
           <td><b>Timestamp</b></td>          
