--- a/app/index.html
+++ b/app/index.html
@@ -66,13 +66,13 @@
           <td>Soil Moisture</td>
           <td>{{ soilMoistureTimestamp }}</td>
           <td>{{ soilMoistureRecords }}</td>
-          <td>{{ latestSoilMoisture | number:1 }} %</td>
+          <td ng-style="customStyleWaterPresent.style">{{ latestSoilMoisture | number:1 }} %</td>
         </tr>
         <tr>
           <td>Water Tank Level</td>
           <td>{{ waterLevelTimestamp }}</td>
           <td>{{ waterLevelRecords }}</td>
-          <td ng-style="customStyle.style">{{ latestWaterLevel | number:1 }} l</td>
+          <td ng-style="customStyleWaterLevelLow.style">{{ latestWaterLevel | number:1 }} l</td>
         </tr>
         <tr>
           <td>Water Pump Event -1</td>
